objects/UploadFileHistory__c.object
<CustomObject>
    <description>the file</description>
    <fields>
        <fullName>ApplicationID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked Application Object with upload item</description>
        <label>ApplicationID</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Upload File History_Application</relationshipLabel>
        <relationshipName>History_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrandCode__c</fullName>
        <description>The Code of the charter the file is associated with</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BrandCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZPartyID__c</fullName>
        <description>Party Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Party Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyID__c</fullName>
        <description>Company ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>Company Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <description>Company ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditItemCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Credit Item Count</description>
        <label>Credit Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Item_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Credit Item Count</description>
        <label>Credit Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DebitItemCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Debig Item Count</description>
        <label>Debit Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit_Item_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Debig Item Count</description>
        <label>Debit Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentId__c</fullName>
        <description>Contains the document id for the file</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DocumentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>Effective Date for all batches in the file.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Effective Date for all batches in the file.</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective Date for all batches in the file.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Effective Date for all batches in the file.</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FCMDocumentId__c</fullName>
        <description>FCM Document Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FCMDocumentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileExt__c</fullName>
        <description>Extension of the file</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileExtension__c</fullName>
        <description>Extension of the file</description>
        <label>File Extension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FileExtension</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <description>File Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileTransferRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>File Transfer Retry Count</description>
        <label>File Transfer Retry Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FileTransferStatusMessage__c</fullName>
        <description>File Transfer Status Message</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Transfer Status Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FileTransferStatus__c</fullName>
        <description>File Transfer Status</description>
        <label>File Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FileTransferStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FileType__c</fullName>
        <description>Filetype C: Credit, D: Debit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FileType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenMsg__c</fullName>
        <description>GenMsg</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GenMsg</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImmediateOriginName__c</fullName>
        <description>Immediate Origin Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immediate Origin Name</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Origin_Name__c</fullName>
        <description>Immediate Origin Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immediate Origin Name</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MembershipNumber__c</fullName>
        <description>Used to maintain membership number of Party</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MembershipNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyFirstName__c</fullName>
        <description>Party First Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Party First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyLastName__c</fullName>
        <description>Party Last Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Party Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyName__c</fullName>
        <description>Party Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PartyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RetryCounter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times system has tried to email the status of the system</description>
        <label>Retry Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <description>The serial number of the generated file.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SerialNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmissionID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked Submission Object with upload item</description>
        <label>SubmissionID</label>
        <referenceTo>tffa__Submission__c</referenceTo>
        <relationshipLabel>Upload File History</relationshipLabel>
        <relationshipName>Upload_File_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmissionName__c</fullName>
        <description>Submission Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SubmissionName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalFileCreditAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Credit Amount</description>
        <label>Total Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalFileDebitAmount__c</fullName>
        <description>Total file debit amount</description>
        <label>Total Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalFileEntryRecords__c</fullName>
        <description>TotalFileEntryRecords</description>
        <label>TotalFileEntryRecords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalFileRecNo__c</fullName>
        <description>Total number of records in the file</description>
        <label>TotalFileRecNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isErrorMailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Error Mail Sent</description>
        <label>Is Error Mail Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isIndexFileGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Index File Generated</description>
        <label>Is Index File Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRetried__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Failed file retried</description>
        <label>Is Failed file retried</label>
        <type>Checkbox</type>
    </fields>
    <label>Upload File History</label>
    <listViews>
        <fullName>ACH_Files</fullName>
        <columns>FileName__c</columns>
        <columns>FileType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>FileTransferStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FileType__c</field>
            <operation>equals</operation>
            <value>ACH</value>
        </filters>
        <label>ACH Files</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>FileName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>FileTransferStatus__c</columns>
        <columns>FileTransferStatusMessage__c</columns>
        <columns>SubmissionName__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Upload File History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upload File History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>